<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="HardcodedText" >

    <TextView
        android:id="@+id/main_files_stat_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgs_media_store_category_files"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msgs_main_stat_total"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/main_files_stat_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msgs_main_stat_notfound"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/main_files_stat_notfound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFCC8800" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msgs_main_stat_size_unmatch"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/main_files_stat_size_unmatch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFCC8800" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msgs_main_stat_lastmod_unmatch"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/main_files_stat_lastmod_unmatch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFCC8800" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp" >

        <Button
            android:id="@+id/main_files_stat_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/msgs_main_stat_list" />

        <Button
            android:id="@+id/main_files_sync_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/msgs_main_stat_sync" />
    </LinearLayout>

</LinearLayout>